fixed hamburger icon on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,3 +105,10 @@ body {
   color: #fff;
   background-color: #108a93;
 }
+
+.menu-icon {
+  width: 35px;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 6px 0;
+}
